--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,9 @@ rvm:
   - jruby-19mode # JRuby in 1.9 mode
   - rbx-18mode
   - rbx-19mode
+matrix:
+  allow_failures:
+    - rvm: rbx-18mode
+    - rvm: rbx-19mode
 
 script: bundle exec rspec spec
